Added handling for task start transition events'